[metadata]
name = nssgui
version = 0.0.1
author_email = sethjkitchens@gmail.com
description = A GUI toolkit extending PySimpleGUI
long_description = A GUI toolkit that expands PySimpleGUI, adding an object-oriented layer that sits on top of and coexists with PSG. This includes event handling, a popup builder, and classes for windows and window elements that manage data flow and provide an expandable infrastructure to quickly build reusable GUI functionality.
keywords = GUI, OOP
license = None, All Rights Reserved
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    nssgui
install_requires =
    requests
    importlib-metadata
    PySimpleGUI >= 4.58.0