[metadata]
name = nssgui
version = 0.0.1
author_email = sethjkitchens@gmail.com
description = A GUI toolkit extending PySimpleGUI
long_description = A GUI toolkit that extends PySimpleGUI with some more complex features. This includes event handling, a popup builder, and classes for windows and window elements that manage data flow and provide an expandable infrastructure to quickly build reusable GUI functionality.
keywords = GUI, OOP
license = None, All Rights Reserved
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    nssgui
    nssgui.ge
    nssgui.sg
install_requires =
    requests
    importlib-metadata
    PySimpleGUI